shesmu-server/src/test/resources/bad/ternaryif-test-is-not-boolean.shesmu
Input test;

Olive Run ok With ok = ("string" ? 3 : 4) == 3  ;
